--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>PixelPlusUI</title>
-  <base href="https://mr-beast77.github.io/pp">
+  <base href="https://mr-beast77.github.io/pp/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="./assets/images/pixelpluslogo.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
